[package]
name = "idokendo-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
gloo = "0.8.0"
serde = "1.0.160"
serde_json = "1.0.96"
stylist = { version = "0.10.0", features = ["yew"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }
yew = { version = "0.19.3" }
yew-router = "0.16.0"
