[package]
name = "idokendo-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
gloo = "0.8.0"
include_dir = "0.7.3"
log = "0.4.17"
markdown = "0.3.0"
serde = "1.0.160"
serde_json = "1.0.96"
stylist = { version = "0.10.0", features = ["yew"] }
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.56", features = ["HtmlInputElement", "console"] }
yew = { version = "0.19.3" }
yew-router = "0.16.0"
